Fixed button alignment in dialog form

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ main .cards .card>button:active {
     box-shadow: 0 0 1px black;
 }
 
-/* Dialog form CSS */
+/* Dialog form Appearance */
 
 dialog {
     z-index: 1;
@@ -133,7 +133,7 @@ dialog {
     left: calc(calc(100vw - clamp(320px, 20vw, 610px))/2);
     padding: 10px;
     width: clamp(320px, 20vw, 610px);
-    display: none;
+    /* display: none; */
 
     background-color: var(--accent-color);
     border: 3px solid var(--primary-color);
@@ -141,17 +141,24 @@ dialog {
 }
 
 dialog::backdrop {
-    background-color: #0a51cc;
+    background-color: #0a51cc85;
 }
 
-dialog form>* {
-    margin: 15px 5px;
+dialog form {
+    display: flex;
+    flex-direction: column;
+}
+
+dialog div {
+    margin: 12px 5px;
 }
 
 dialog button {
     padding: 5px 10px;
     background-color: var(--primary-color);
     color: var(--accent-color);
+    max-width: fit-content;
+    place-self: center;
 }
 
 dialog button:hover {
@@ -165,6 +172,8 @@ dialog button:active {
     box-shadow: 0 0 1px black;
 }
 
+/* Dialog input appearance */
+
 dialog input,
 dialog label {
     display: block;
@@ -174,13 +183,17 @@ dialog input {
     width: 100%;
     background-color: var(--primary-color);
     border-radius: 5px;
-    padding-left: 5px;
+    padding: 3px 5px;
     color: var(--accent-color);
+    font-weight: 1000;
+    font-size: 1.1rem;
 }
 
 dialog input:focus {
     outline: none;
 }
+
+
 
 footer {
     /* border: 3px solid #f88686; */
